5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1668_2974.log
== TEST (2019-04-15 18:17:28) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total == valor):
     print(total)
      print("NAO")
		
else:
	 print(total)
		print("sim")
-- ERROR:
File "XXXX", line 9
    print("NAO")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:17:52) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total == valor):
      print(total)
      print("NAO")
		
else:
	print(total)
   print("sim")
-- ERROR:
File "XXXX", line 13
    print("sim")
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:18:03) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total == valor):
      print(total)
      print("NAO")
		
else:
	  print(total)
      print("sim")
-- ERROR:
File "XXXX", line 13
    print("sim")
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:18:16) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total == valor):
     print(total)
      print("NAO")
		
else:
	  print(total)
      print("sim")
-- ERROR:
File "XXXX", line 9
    print("NAO")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:19:11) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total == valor):
      print(total)
      print("NAO")
		
else:
   print(total)
     print("sim")
-- ERROR:
File "XXXX", line 13
    print("sim")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:19:35) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total == valor):
      print(total)
      print("NAO")
		
else:
	 print(total)
-- OUTPUT:
12003.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:47) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total >= valor):
      print(total)
      print("NAO")
		
else:
    print(total)
   print("NAO")
     
-- ERROR:
File "XXXX", line 13
    print("NAO")
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:55) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total >= valor):
      print(total)
      print("NAO")
		
else:
    print(total)
      print("NAO")
     
-- ERROR:
File "XXXX", line 13
    print("NAO")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:14) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total >= valor):
      print(total)
      print("NAO")
		
else:
      print(total)
      print("NAO")
     
-- OUTPUT:
12003.0
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:22:17) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total >= valor):
      print(total)
      print("NAO")
		
else:
      print(total)
      print("NAO")
     
-- EXECUTION TIME:
0.230123
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003.0
NAO
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
NAO
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800.0
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:19) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total >= valor):
      print(total)
      print("NAO")
		
else:
      print(total)
      print("NAO")
     
-- OUTPUT:
12003.0
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:22:29) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total >= valor):
      print(total)
      print("NAO")
		
else:
      print(total)
      print("SIM")
     
-- EXECUTION TIME:
0.14656
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003.0
NAO
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
SIM
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800.0
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:23:10) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total >= valor):
      print(round(total, 1))
      print("NAO")
		
else:
      print(round(total, 1))
      print("SIM")
     
-- EXECUTION TIME:
0.158559
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003.0
NAO
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
SIM
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800.0
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:24:08) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total <= valor):
      print(round(total, 1))
      print("SIM")
		
else:
      print(round(total, 1))
      print("NAO")
     
-- EXECUTION TIME:
0.178529
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003.0
NAO
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
SIM
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800.0
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:15) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*acai + 3*salgado

if  (total <= valor):
      print(round(total, 1))
      print("SIM")
		
else:
      print(round(total, 1))
      print("NAO")
     
-- OUTPUT:
12003.0
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:57) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*(acai/1000) + 3*salgado

if  (total <= valor):
      print(round(total, 1))
      print("SIM")
		
else:
      print(round(total, 1))
      print("NAO")
     
-- OUTPUT:
15.0
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:25:15) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*(acai/1000) + 3*salgado

if  (total <= valor):
      print(round(total, 1))
      print("SIM")
		
else:
      print(round(total, 1))
      print("NAO")
     
-- EXECUTION TIME:
0.187056
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
SIM
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
SIM
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:20) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*(acai/1000) + 3*salgado

if  (total <= valor):
      print(round(total, 1))
      print("SIM")
		
else:
      print(round(total, 1))
      print("NAO")
     
-- OUTPUT:
15.0
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:25:54) 
-- CODE:
acai = float(input("quantidade de acai: "))
salgado = int(input("quantidade de salgado: "))
valor = float(input("valor: "))

total = 24*(acai/1000) + 3*salgado

if  (total <= valor):
      print(round(total, 1))
      print("Sim")
		
else:
      print(round(total, 1))
      print("Nao")
     
-- EXECUTION TIME:
0.284314
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
